# aim2go.xyz

./: Cargo.toml  README.md
games/test/data/: custom.yaml
src/: cli.rs  config.rs  main.rs
